After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788894 - test_callback_scope_call_array_inout crashes with SIGBUS on sparc64
test_callback_scope_call_array_inout crashes with SIGBUS on sparc64
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: gobject
Git master
Other Linux
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-12 18:23 UTC by James Clarke
Modified: 2017-10-15 19:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
closure: Fix unaligned and out-of-bounds access (5.43 KB, patch)
2017-10-12 18:23 UTC, James Clarke
none Details | Review
[PATCH v2] closure: Fix unaligned and out-of-bounds access (5.71 KB, patch)
2017-10-13 17:06 UTC, James Clarke
committed Details | Review

Description James Clarke 2017-10-12 18:23:35 UTC
Created attachment 361445 [details] [review]
closure: Fix unaligned and out-of-bounds access

Running the testsuite on sparc64 fails, crashing with SIGBUS (an unaligned access) during test_callback_scope_call_array_inout. The attached patch fixes this.
Comment 1 Christoph Reiter (lazka) 2017-10-13 16:30:10 UTC
Review of attachment 361445 [details] [review]:

Thanks, looks reasonable.

You missed one "args[i]" for the GI_TYPE_TAG_UNICHAR case
Comment 2 James Clarke 2017-10-13 17:06:47 UTC
Created attachment 361543 [details] [review]
[PATCH v2] closure: Fix unaligned and out-of-bounds access
Comment 3 James Clarke 2017-10-13 17:08:24 UTC
Thanks, so I did; I was working on the Debian package and forward-ported the patch, but it isn't new enough to have that case. Amended patch added.
Comment 4 Christoph Reiter (lazka) 2017-10-15 19:27:33 UTC
Thanks!